# rules_jest_ts_bug

./: .bazelrc  BUILD.bazel  WORKSPACE  jest.config.js  package.json  pnpm-lock.yaml
lib1/: BUILD.bazel  lib1.test.ts
lib2/: BUILD.bazel  index.ts  lib2.test.ts
