load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "lib1-ts",
    srcs = ["index.ts"],
    deps = [
        "//:node_modules/ts-md5",
    ],
    declaration = True,
    tsconfig = {},
    extends = "//:tsconfig",
)

npm_package(
    name = "lib1",
    srcs = [":lib1-ts"],
    package = "@oqton/lib1",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tests-ts",
    srcs = ["lib1.test.ts"],
    deps = [
        ":lib1-ts",
        "//:node_modules/@types/jest",
    ],
    tsconfig = {},
    extends = "//:tsconfig",
)

jest_test(
    name = "tests",
    config = "//:jest.config.js",
    data = ["tests-ts"],
)
