load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "lib2-ts",
    srcs = ["index.ts"],
    deps = [
        "//:node_modules/@oqton/lib1",
    ],
    declaration = True,
    tsconfig = {},
    extends = "//:tsconfig",
)

ts_project(
    name = "tests-ts",
    srcs = ["lib2.test.ts"],
    deps = [
        ":lib2-ts",
        "//:node_modules/@types/jest",
        # "//:node_modules/ts-md5",  # Adding this dep makes the test below to pass.
    ],
    tsconfig = {},
    extends = "//:tsconfig",
)

jest_test(
    name = "tests",
    config = "//:jest.config.js",
    data = ["tests-ts"],
)
